forms, comparison table - responsive

--- a/src/app/pages/personal-accident-cover/enquiry-form/enquiry-form.html
+++ b/src/app/pages/personal-accident-cover/enquiry-form/enquiry-form.html
@@ -8,14 +8,17 @@
       <button
         type="button"
         (click)="goBack()"
-        class="hidden sm:flex items-center mr-4 group"
+        class="flex items-center mr-4 group"
         aria-label="Go back"
       >
         <svg xmlns="http://www.w3.org/2000/svg"
-            class="w-5 h-5 text-[#006D8D] group-hover:text-[#004b60] transition"
-            fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M15 6l-6 6 6 6" />
-        </svg>
+          class="w-5 h-5 text-[#006D8D] group-hover:text-[#004b60] transition"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M15 6l-6 6 6 6" />
+      </svg>
       </button>
 
       <!-- Stepper Centered -->
