--- a/src/app/pages/supertopup/quotes/quotes.html
+++ b/src/app/pages/supertopup/quotes/quotes.html
@@ -194,7 +194,8 @@
 
             <!-- RIGHT SECTION -->
             <div
-              class="w-full md:w-[30%] bg-gradient-to-b from-[#E8F7FF] to-white p-3 md:p-6 flex flex-col justify-between">
+            class="quote-card-cta w-full md:w-[30%] bg-gradient-to-b from-[#E8F7FF] to-white p-3 md:p-6 flex flex-col justify-between">
+
 
               <div class="flex justify-between mb-0 gap-0 !leading-tight">
 
@@ -224,9 +225,10 @@
                 Download Brochure
                 <img class="w-4 h-4" src="assets/quote/download.svg" alt="" />
               </a>
-               <a *ngIf="p.onePager" [href]="p.onePager" download target="_blank"
-                class="mt-3 md:mt-4 text-sm text-[#006D8D] flex items-center justify-center gap-1">
-                One Pager
+               <a *ngIf="p.onePager"
+              class="mt-0.5 md:mt-1 text-sm text-[#006D8D] flex items-center justify-center gap-1">
+
+                Download One Pager
                 <img class="w-4 h-4" src="assets/quote/download.svg" alt="" />
               </a>
 
@@ -319,7 +321,7 @@
     <div class="flex gap-3 items-center flex-1 overflow-x-auto py-1 no-scrollbar">
       <!-- Selected plans -->
       <div
-        class="flex items-center gap-3 px-4 py-3 border-2 border-slate-200 rounded-xl bg-white flex-shrink-0 min-w-[180px] hover:border-[#0b5cff] hover:shadow"
+        class="flex items-center gap-2 px-4 py-3 border-2 border-slate-200 rounded-xl bg-white flex-shrink-0 min-w-[180px] hover:border-[#0b5cff] hover:shadow"
         *ngFor="let p of compare; trackBy: trackByPlanId">
         <img [src]="p.logo" [alt]="p.insurerName"class="w-15 h-10 object-contain rounded-md" />
         <div class="flex-1 min-w-0">
@@ -364,9 +366,20 @@
 <div *ngIf="isCompareOpen" id="compareWrapper" class="compare-screen fixed inset-0 z-[1400] flex flex-col bg-white overflow-hidden">
   <!-- HEADER -->
   <div class="cmp-screen__header flex items-center bg-white border-b border-slate-200 px-4 py-3 flex-shrink-0">
-    <button type="button" class="bg-transparent border-0 text-[#006d8d] font-semibold text-[15px] cursor-pointer"
-      (click)="closeCompare()">
-      ← Back to list
+     <button
+      type="button"
+      (click)="closeCompare()"
+      class="flex items-center mr-1 flex-shrink-0 group"
+      aria-label="Go back"
+    >
+      <svg xmlns="http://www.w3.org/2000/svg"
+          class="w-5 h-5 text-[#006D8D] group-hover:text-[#004b60] transition"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M15 6l-6 6 6 6" />
+      </svg>
     </button>
 
     <div class="flex-1 text-center font-bold text-[16px] text-[#222]">
