--- a/src/app/pages/supertopup/quotes/quotes.html
+++ b/src/app/pages/supertopup/quotes/quotes.html
@@ -225,7 +225,7 @@
                 Download Brochure
                 <img class="w-4 h-4" src="assets/quote/download.svg" alt="" />
               </a>
-               <a *ngIf="p.onePager"
+               <a *ngIf="p.onePager" [href]="p.onePager" download target="_blank"
               class="mt-0.5 md:mt-1 text-sm text-[#006D8D] flex items-center justify-center gap-1">
 
                 Download One Pager
