--- a/src/app/pages/gmc/quotes/quotes.html
+++ b/src/app/pages/gmc/quotes/quotes.html
@@ -107,14 +107,14 @@
 
 
     <!-- Right Side User Info -->
-    <div
+    <!-- <div
       class="w-full sm:ml-auto sm:w-auto flex items-center bg-[#F8FDFF] border border-[#E8F3FF] rounded-full px-5 py-2 shadow-sm gap-3">
       <div class="flex items-center text-gray-700 text-sm">
         Self: <span class="font-semibold ml-1">{{ age }} years</span>
         <span class="mx-2 text-gray-400">|</span>
         Pincode: <span class="font-semibold ml-1">{{ pincode }}</span>
       </div>
-    </div>
+    </div> -->
 
     <div class="absolute bottom-0 left-0 right-0 h-[3px] bg-yellow-400 -mx-4 sm:-mx-6"></div>
   </div>
@@ -157,7 +157,7 @@
                 <span
                   class="inline-flex items-center gap-1 px-3 py-1 bg-orange-100 text-orange-600 text-sm rounded-full">
                   <img src="assets/quote/circleOrange.svg" alt="">
-                  {{ p.tag }}
+                  {{ p.company }}
                 </span>
               </div>
             </div>
@@ -203,14 +203,8 @@
               <button
               (click)="goToProposal(p)"
               class="bg-[#007AAA] hover:bg-[#006988] text-white font-semibold py-2 rounded-md shadow text-sm mb-2">
-              Buy Now {{ p.base }}
-            </button>
-            <button
-              *ngIf="p.addonNumber > 0"
-              (click)="goToProposal(p)"
-              class="bg-[#007AAA] hover:bg-[#006988] text-white font-semibold py-2 rounded-md shadow text-xs">
-              Buy Now ( with compulsory add-on) <br> {{ p.addon }}
-            </button>
+              Buy Now {{ p.premium }}
+            </button>         
 
 
               <a *ngIf="p.brochure" [href]="p.brochure" download target="_blank"
